# conexp-hs

./: README.md  conexp-hs.cabal
src/: Main.hs  Util.hs
src/FormalContext/: FormalContext.hs  FormalContext2.hs  FormalContexts.hs  Matrices.hs  Wrapper.hs
src/IO/: AttributeExplorationWriter.hs  BurmeisterReader.hs  Files.hs  StringState.hs
src/NextClosure/: AttributeExploration.hs  FormalConcepts.hs  FormalImplications.hs  NextClosure.hs
