name:           conexp-hs
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Francesco Kriegel
maintainer:     Francesco Kriegel
data-files:     
                src/AttributeExploration.hs, 
                src/Burmeister.hs, 
                src/CLI.hs, 
                src/FCAMonads.hs, 
                src/FormalContext.hs, 
                src/Main.hs
stability:      experimental

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   MissingH >=1.2.0 && <1.3,
                   mtl >=2.1.2 && <2.2,
                   directory >=1.2.0 && <1.3,
                   repa >=3.2.3 && <3.3,
                   containers >=0.5.0 && <0.6,
                   split >=0.2.2 && <0.3,
                   time >=1.4.0 && <1.5,
                   parallel >=3.2.0 && <3.3
  ghc-options:     -Wall
  other-modules:   
                   Util,
                   FormalContext.Matrices

executable conexp-hs
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   split >=0.2.2 && <0.3,
                   time >=1.4.0 && <1.5,
                   parallel >=3.2.0 && <3.3
  ghc-options:     -Wall
  other-modules:   
                   Util,
                   FormalContext.Matrices

rmalContext.FormalContext2

